Fix PODCAT-384 issue: Dataset Detail Page - Contrast and Spacing (508)

--- a/src/pages/datasetDetailPage/datasetDetailPage.css
+++ b/src/pages/datasetDetailPage/datasetDetailPage.css
@@ -46,8 +46,8 @@ ul.breadcrumb li a:hover {
   /* padding: 0px 0 20px 20px; */
   padding: 16px 0 10px 0px;
   width: 100%;
-  /* background-color: #07368b; */
-  background: linear-gradient(to right, #1b83d2,#0c3561);
+  /* background: linear-gradient(to right, #3060b8,#05296b); */
+  background: linear-gradient(.25turn, #0c3561, 66%, #1b83d2);
   /* border-bottom: 1px solid lightgray; */
   position: relative;
 }
